...
            if viewModel.stationArray.isEmpty {
                Text(viewModel.noResultsLabel)
                    .foregroundColor(.gray)
            } else {
                List(searchResults, id: \.self, selection: $selectedStation) { station in
                    Text(station.name)
                        .accessibilityIdentifier("StationName")
                }
                .onChange(of: selectedStation) { _ in
                    searchText = " "    // this is required due to this: https://stackoverflow.com/questions/75209612/navigation-bug-when-dismissing-view-while-focussing-on-empty-searchable-modif
                    router.pop()
                }
                .accessibilityIdentifier("StationList")
            }
        }
        .navigationTitle(viewModel.titleLabel(for: selectedStation))
        .searchable(text: $searchText, placement: .navigationBarDrawer(displayMode: .always))
        .onAppear {
            viewModel.fetchStationList()
...
